--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
+  "homepage": "https://ckkorson.github.io/caleb-korson-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
@@ -18,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
